src/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> vyking_input
Rule 1     empty -> <empty>
Rule 2     vyking_input -> statement_sequence ENDMARKER
Rule 3     statement_sequence -> statement statement_sequence
Rule 4     statement_sequence -> statement
Rule 5     statement -> simple_statement
Rule 6     statement -> compound_statement
Rule 7     simple_statement -> assignment NEWLINE
Rule 8     simple_statement -> return_statement NEWLINE
Rule 9     simple_statement -> funcall NEWLINE
Rule 10    compound_statement -> if_statement
Rule 11    compound_statement -> while_statement
Rule 12    compound_statement -> fundef
Rule 13    assignment -> ID ASSIGN clause
Rule 14    assignment -> ID INC expression
Rule 15    assignment -> ID DEC expression
Rule 16    return_statement -> RETURN expression
Rule 17    funcall -> ID LPAREN args RPAREN
Rule 18    funcall -> ID LPAREN RPAREN
Rule 19    args -> args COMMA clause
Rule 20    args -> clause
Rule 21    if_statement -> IF clause COLON suite if_closure
Rule 22    if_closure -> elif_statement
Rule 23    if_closure -> ELSE COLON suite
Rule 24    if_closure -> empty
Rule 25    elif_statement -> ELIF clause COLON suite if_closure
Rule 26    while_statement -> WHILE clause COLON suite
Rule 27    fundef -> DEFUN ID LPAREN parameters RPAREN COLON suite
Rule 28    parameters -> parameters COMMA ID
Rule 29    parameters -> ID
Rule 30    suite -> simple_statement
Rule 31    suite -> NEWLINE INDENT statement_sequence DEDENT
Rule 32    clause -> NOT clause
Rule 33    clause -> LPAREN clause RPAREN
Rule 34    clause -> clause OR clause
Rule 35    clause -> clause AND clause
Rule 36    clause -> expression EQ expression
Rule 37    clause -> expression NEQ expression
Rule 38    clause -> expression LT expression
Rule 39    clause -> expression GT expression
Rule 40    clause -> expression GEQ expression
Rule 41    clause -> expression LEQ expression
Rule 42    clause -> expression
Rule 43    expression -> expression PLUS expression
Rule 44    expression -> expression MINUS expression
Rule 45    expression -> expression TIMES expression
Rule 46    expression -> expression DIVIDE expression
Rule 47    expression -> MINUS expression
Rule 48    expression -> numeric
Rule 49    numeric -> INT
Rule 50    numeric -> FLOAT
Rule 51    expression -> ID
Rule 52    expression -> STRING
Rule 53    expression -> funcall

Terminals, with rules where they appear

AND                  : 35
ASSIGN               : 13
COLON                : 21 23 25 26 27
COMMA                : 19 28
DEC                  : 15
DEDENT               : 31
DEFUN                : 27
DIVIDE               : 46
ELIF                 : 25
ELSE                 : 23
ENDMARKER            : 2
EQ                   : 36
FLOAT                : 50
GEQ                  : 40
GT                   : 39
ID                   : 13 14 15 17 18 27 28 29 51
IF                   : 21
INC                  : 14
INDENT               : 31
INT                  : 49
LEQ                  : 41
LPAREN               : 17 18 27 33
LT                   : 38
MINUS                : 44 47
NEQ                  : 37
NEWLINE              : 7 8 9 31
NOT                  : 32
OR                   : 34
PLUS                 : 43
RETURN               : 16
RPAREN               : 17 18 27 33
STRING               : 52
TIMES                : 45
WHILE                : 26
error                : 

Nonterminals, with rules where they appear

args                 : 17 19
assignment           : 7
clause               : 13 19 20 21 25 26 32 33 34 34 35 35
compound_statement   : 6
elif_statement       : 22
empty                : 24
expression           : 14 15 16 36 36 37 37 38 38 39 39 40 40 41 41 42 43 43 44 44 45 45 46 46 47
funcall              : 9 53
fundef               : 12
if_closure           : 21 25
if_statement         : 10
numeric              : 48
parameters           : 27 28
return_statement     : 8
simple_statement     : 5 30
statement            : 3 4
statement_sequence   : 2 3 31
suite                : 21 23 25 26 27
vyking_input         : 0
while_statement      : 11

Parsing method: LALR

state 0

    (0) S' -> . vyking_input
    (2) vyking_input -> . statement_sequence ENDMARKER
    (3) statement_sequence -> . statement statement_sequence
    (4) statement_sequence -> . statement
    (5) statement -> . simple_statement
    (6) statement -> . compound_statement
    (7) simple_statement -> . assignment NEWLINE
    (8) simple_statement -> . return_statement NEWLINE
    (9) simple_statement -> . funcall NEWLINE
    (10) compound_statement -> . if_statement
    (11) compound_statement -> . while_statement
    (12) compound_statement -> . fundef
    (13) assignment -> . ID ASSIGN clause
    (14) assignment -> . ID INC expression
    (15) assignment -> . ID DEC expression
    (16) return_statement -> . RETURN expression
    (17) funcall -> . ID LPAREN args RPAREN
    (18) funcall -> . ID LPAREN RPAREN
    (21) if_statement -> . IF clause COLON suite if_closure
    (26) while_statement -> . WHILE clause COLON suite
    (27) fundef -> . DEFUN ID LPAREN parameters RPAREN COLON suite

    ID              shift and go to state 14
    RETURN          shift and go to state 7
    IF              shift and go to state 15
    WHILE           shift and go to state 6
    DEFUN           shift and go to state 3

    funcall                        shift and go to state 5
    compound_statement             shift and go to state 8
    assignment                     shift and go to state 13
    vyking_input                   shift and go to state 1
    simple_statement               shift and go to state 2
    fundef                         shift and go to state 16
    statement_sequence             shift and go to state 4
    return_statement               shift and go to state 9
    while_statement                shift and go to state 10
    statement                      shift and go to state 11
    if_statement                   shift and go to state 12

state 1

    (0) S' -> vyking_input .



state 2

    (5) statement -> simple_statement .

    ID              reduce using rule 5 (statement -> simple_statement .)
    RETURN          reduce using rule 5 (statement -> simple_statement .)
    IF              reduce using rule 5 (statement -> simple_statement .)
    WHILE           reduce using rule 5 (statement -> simple_statement .)
    DEFUN           reduce using rule 5 (statement -> simple_statement .)
    ENDMARKER       reduce using rule 5 (statement -> simple_statement .)
    DEDENT          reduce using rule 5 (statement -> simple_statement .)


state 3

    (27) fundef -> DEFUN . ID LPAREN parameters RPAREN COLON suite

    ID              shift and go to state 17


state 4

    (2) vyking_input -> statement_sequence . ENDMARKER

    ENDMARKER       shift and go to state 18


state 5

    (9) simple_statement -> funcall . NEWLINE

    NEWLINE         shift and go to state 19


state 6

    (26) while_statement -> WHILE . clause COLON suite
    (32) clause -> . NOT clause
    (33) clause -> . LPAREN clause RPAREN
    (34) clause -> . clause OR clause
    (35) clause -> . clause AND clause
    (36) clause -> . expression EQ expression
    (37) clause -> . expression NEQ expression
    (38) clause -> . expression LT expression
    (39) clause -> . expression GT expression
    (40) clause -> . expression GEQ expression
    (41) clause -> . expression LEQ expression
    (42) clause -> . expression
    (43) expression -> . expression PLUS expression
    (44) expression -> . expression MINUS expression
    (45) expression -> . expression TIMES expression
    (46) expression -> . expression DIVIDE expression
    (47) expression -> . MINUS expression
    (48) expression -> . numeric
    (51) expression -> . ID
    (52) expression -> . STRING
    (53) expression -> . funcall
    (49) numeric -> . INT
    (50) numeric -> . FLOAT
    (17) funcall -> . ID LPAREN args RPAREN
    (18) funcall -> . ID LPAREN RPAREN

    NOT             shift and go to state 29
    LPAREN          shift and go to state 25
    MINUS           shift and go to state 23
    ID              shift and go to state 26
    STRING          shift and go to state 24
    INT             shift and go to state 27
    FLOAT           shift and go to state 28

    clause                         shift and go to state 20
    numeric                        shift and go to state 21
    funcall                        shift and go to state 22
    expression                     shift and go to state 30

state 7

    (16) return_statement -> RETURN . expression
    (43) expression -> . expression PLUS expression
    (44) expression -> . expression MINUS expression
    (45) expression -> . expression TIMES expression
    (46) expression -> . expression DIVIDE expression
    (47) expression -> . MINUS expression
    (48) expression -> . numeric
    (51) expression -> . ID
    (52) expression -> . STRING
    (53) expression -> . funcall
    (49) numeric -> . INT
    (50) numeric -> . FLOAT
    (17) funcall -> . ID LPAREN args RPAREN
    (18) funcall -> . ID LPAREN RPAREN

    MINUS           shift and go to state 23
    ID              shift and go to state 26
    STRING          shift and go to state 24
    INT             shift and go to state 27
    FLOAT           shift and go to state 28

    funcall                        shift and go to state 22
    expression                     shift and go to state 31
    numeric                        shift and go to state 21

state 8

    (6) statement -> compound_statement .

    ID              reduce using rule 6 (statement -> compound_statement .)
    RETURN          reduce using rule 6 (statement -> compound_statement .)
    IF              reduce using rule 6 (statement -> compound_statement .)
    WHILE           reduce using rule 6 (statement -> compound_statement .)
    DEFUN           reduce using rule 6 (statement -> compound_statement .)
    ENDMARKER       reduce using rule 6 (statement -> compound_statement .)
    DEDENT          reduce using rule 6 (statement -> compound_statement .)


state 9

    (8) simple_statement -> return_statement . NEWLINE

    NEWLINE         shift and go to state 32


state 10

    (11) compound_statement -> while_statement .

    ID              reduce using rule 11 (compound_statement -> while_statement .)
    RETURN          reduce using rule 11 (compound_statement -> while_statement .)
    IF              reduce using rule 11 (compound_statement -> while_statement .)
    WHILE           reduce using rule 11 (compound_statement -> while_statement .)
    DEFUN           reduce using rule 11 (compound_statement -> while_statement .)
    DEDENT          reduce using rule 11 (compound_statement -> while_statement .)
    ENDMARKER       reduce using rule 11 (compound_statement -> while_statement .)


state 11

    (3) statement_sequence -> statement . statement_sequence
    (4) statement_sequence -> statement .
    (3) statement_sequence -> . statement statement_sequence
    (4) statement_sequence -> . statement
    (5) statement -> . simple_statement
    (6) statement -> . compound_statement
    (7) simple_statement -> . assignment NEWLINE
    (8) simple_statement -> . return_statement NEWLINE
    (9) simple_statement -> . funcall NEWLINE
    (10) compound_statement -> . if_statement
    (11) compound_statement -> . while_statement
    (12) compound_statement -> . fundef
    (13) assignment -> . ID ASSIGN clause
    (14) assignment -> . ID INC expression
    (15) assignment -> . ID DEC expression
    (16) return_statement -> . RETURN expression
    (17) funcall -> . ID LPAREN args RPAREN
    (18) funcall -> . ID LPAREN RPAREN
    (21) if_statement -> . IF clause COLON suite if_closure
    (26) while_statement -> . WHILE clause COLON suite
    (27) fundef -> . DEFUN ID LPAREN parameters RPAREN COLON suite

    ENDMARKER       reduce using rule 4 (statement_sequence -> statement .)
    DEDENT          reduce using rule 4 (statement_sequence -> statement .)
    ID              shift and go to state 14
    RETURN          shift and go to state 7
    IF              shift and go to state 15
    WHILE           shift and go to state 6
    DEFUN           shift and go to state 3

    funcall                        shift and go to state 5
    compound_statement             shift and go to state 8
    assignment                     shift and go to state 13
    simple_statement               shift and go to state 2
    fundef                         shift and go to state 16
    statement_sequence             shift and go to state 33
    return_statement               shift and go to state 9
    while_statement                shift and go to state 10
    statement                      shift and go to state 11
    if_statement                   shift and go to state 12

state 12

    (10) compound_statement -> if_statement .

    ID              reduce using rule 10 (compound_statement -> if_statement .)
    RETURN          reduce using rule 10 (compound_statement -> if_statement .)
    IF              reduce using rule 10 (compound_statement -> if_statement .)
    WHILE           reduce using rule 10 (compound_statement -> if_statement .)
    DEFUN           reduce using rule 10 (compound_statement -> if_statement .)
    DEDENT          reduce using rule 10 (compound_statement -> if_statement .)
    ENDMARKER       reduce using rule 10 (compound_statement -> if_statement .)


state 13

    (7) simple_statement -> assignment . NEWLINE

    NEWLINE         shift and go to state 34


state 14

    (13) assignment -> ID . ASSIGN clause
    (14) assignment -> ID . INC expression
    (15) assignment -> ID . DEC expression
    (17) funcall -> ID . LPAREN args RPAREN
    (18) funcall -> ID . LPAREN RPAREN

    ASSIGN          shift and go to state 35
    INC             shift and go to state 38
    DEC             shift and go to state 37
    LPAREN          shift and go to state 36


state 15

    (21) if_statement -> IF . clause COLON suite if_closure
    (32) clause -> . NOT clause
    (33) clause -> . LPAREN clause RPAREN
    (34) clause -> . clause OR clause
    (35) clause -> . clause AND clause
    (36) clause -> . expression EQ expression
    (37) clause -> . expression NEQ expression
    (38) clause -> . expression LT expression
    (39) clause -> . expression GT expression
    (40) clause -> . expression GEQ expression
    (41) clause -> . expression LEQ expression
    (42) clause -> . expression
    (43) expression -> . expression PLUS expression
    (44) expression -> . expression MINUS expression
    (45) expression -> . expression TIMES expression
    (46) expression -> . expression DIVIDE expression
    (47) expression -> . MINUS expression
    (48) expression -> . numeric
    (51) expression -> . ID
    (52) expression -> . STRING
    (53) expression -> . funcall
    (49) numeric -> . INT
    (50) numeric -> . FLOAT
    (17) funcall -> . ID LPAREN args RPAREN
    (18) funcall -> . ID LPAREN RPAREN

    NOT             shift and go to state 29
    LPAREN          shift and go to state 25
    MINUS           shift and go to state 23
    ID              shift and go to state 26
    STRING          shift and go to state 24
    INT             shift and go to state 27
    FLOAT           shift and go to state 28

    clause                         shift and go to state 39
    numeric                        shift and go to state 21
    funcall                        shift and go to state 22
    expression                     shift and go to state 30

state 16

    (12) compound_statement -> fundef .

    ID              reduce using rule 12 (compound_statement -> fundef .)
    RETURN          reduce using rule 12 (compound_statement -> fundef .)
    IF              reduce using rule 12 (compound_statement -> fundef .)
    WHILE           reduce using rule 12 (compound_statement -> fundef .)
    DEFUN           reduce using rule 12 (compound_statement -> fundef .)
    DEDENT          reduce using rule 12 (compound_statement -> fundef .)
    ENDMARKER       reduce using rule 12 (compound_statement -> fundef .)


state 17

    (27) fundef -> DEFUN ID . LPAREN parameters RPAREN COLON suite

    LPAREN          shift and go to state 40


state 18

    (2) vyking_input -> statement_sequence ENDMARKER .

    $end            reduce using rule 2 (vyking_input -> statement_sequence ENDMARKER .)


state 19

    (9) simple_statement -> funcall NEWLINE .

    ID              reduce using rule 9 (simple_statement -> funcall NEWLINE .)
    RETURN          reduce using rule 9 (simple_statement -> funcall NEWLINE .)
    IF              reduce using rule 9 (simple_statement -> funcall NEWLINE .)
    WHILE           reduce using rule 9 (simple_statement -> funcall NEWLINE .)
    DEFUN           reduce using rule 9 (simple_statement -> funcall NEWLINE .)
    ENDMARKER       reduce using rule 9 (simple_statement -> funcall NEWLINE .)
    DEDENT          reduce using rule 9 (simple_statement -> funcall NEWLINE .)
    ELSE            reduce using rule 9 (simple_statement -> funcall NEWLINE .)
    ELIF            reduce using rule 9 (simple_statement -> funcall NEWLINE .)


state 20

    (26) while_statement -> WHILE clause . COLON suite
    (34) clause -> clause . OR clause
    (35) clause -> clause . AND clause

    COLON           shift and go to state 42
    OR              shift and go to state 43
    AND             shift and go to state 41


state 21

    (48) expression -> numeric .

    PLUS            reduce using rule 48 (expression -> numeric .)
    MINUS           reduce using rule 48 (expression -> numeric .)
    TIMES           reduce using rule 48 (expression -> numeric .)
    DIVIDE          reduce using rule 48 (expression -> numeric .)
    COLON           reduce using rule 48 (expression -> numeric .)
    OR              reduce using rule 48 (expression -> numeric .)
    AND             reduce using rule 48 (expression -> numeric .)
    RPAREN          reduce using rule 48 (expression -> numeric .)
    NEWLINE         reduce using rule 48 (expression -> numeric .)
    COMMA           reduce using rule 48 (expression -> numeric .)
    EQ              reduce using rule 48 (expression -> numeric .)
    NEQ             reduce using rule 48 (expression -> numeric .)
    LT              reduce using rule 48 (expression -> numeric .)
    GT              reduce using rule 48 (expression -> numeric .)
    GEQ             reduce using rule 48 (expression -> numeric .)
    LEQ             reduce using rule 48 (expression -> numeric .)


state 22

    (53) expression -> funcall .

    PLUS            reduce using rule 53 (expression -> funcall .)
    MINUS           reduce using rule 53 (expression -> funcall .)
    TIMES           reduce using rule 53 (expression -> funcall .)
    DIVIDE          reduce using rule 53 (expression -> funcall .)
    COLON           reduce using rule 53 (expression -> funcall .)
    OR              reduce using rule 53 (expression -> funcall .)
    AND             reduce using rule 53 (expression -> funcall .)
    RPAREN          reduce using rule 53 (expression -> funcall .)
    NEWLINE         reduce using rule 53 (expression -> funcall .)
    COMMA           reduce using rule 53 (expression -> funcall .)
    EQ              reduce using rule 53 (expression -> funcall .)
    NEQ             reduce using rule 53 (expression -> funcall .)
    LT              reduce using rule 53 (expression -> funcall .)
    GT              reduce using rule 53 (expression -> funcall .)
    GEQ             reduce using rule 53 (expression -> funcall .)
    LEQ             reduce using rule 53 (expression -> funcall .)


state 23

    (47) expression -> MINUS . expression
    (43) expression -> . expression PLUS expression
    (44) expression -> . expression MINUS expression
    (45) expression -> . expression TIMES expression
    (46) expression -> . expression DIVIDE expression
    (47) expression -> . MINUS expression
    (48) expression -> . numeric
    (51) expression -> . ID
    (52) expression -> . STRING
    (53) expression -> . funcall
    (49) numeric -> . INT
    (50) numeric -> . FLOAT
    (17) funcall -> . ID LPAREN args RPAREN
    (18) funcall -> . ID LPAREN RPAREN

    MINUS           shift and go to state 23
    ID              shift and go to state 26
    STRING          shift and go to state 24
    INT             shift and go to state 27
    FLOAT           shift and go to state 28

    funcall                        shift and go to state 22
    expression                     shift and go to state 44
    numeric                        shift and go to state 21

state 24

    (52) expression -> STRING .

    PLUS            reduce using rule 52 (expression -> STRING .)
    MINUS           reduce using rule 52 (expression -> STRING .)
    TIMES           reduce using rule 52 (expression -> STRING .)
    DIVIDE          reduce using rule 52 (expression -> STRING .)
    COLON           reduce using rule 52 (expression -> STRING .)
    OR              reduce using rule 52 (expression -> STRING .)
    AND             reduce using rule 52 (expression -> STRING .)
    RPAREN          reduce using rule 52 (expression -> STRING .)
    NEWLINE         reduce using rule 52 (expression -> STRING .)
    COMMA           reduce using rule 52 (expression -> STRING .)
    EQ              reduce using rule 52 (expression -> STRING .)
    NEQ             reduce using rule 52 (expression -> STRING .)
    LT              reduce using rule 52 (expression -> STRING .)
    GT              reduce using rule 52 (expression -> STRING .)
    GEQ             reduce using rule 52 (expression -> STRING .)
    LEQ             reduce using rule 52 (expression -> STRING .)


state 25

    (33) clause -> LPAREN . clause RPAREN
    (32) clause -> . NOT clause
    (33) clause -> . LPAREN clause RPAREN
    (34) clause -> . clause OR clause
    (35) clause -> . clause AND clause
    (36) clause -> . expression EQ expression
    (37) clause -> . expression NEQ expression
    (38) clause -> . expression LT expression
    (39) clause -> . expression GT expression
    (40) clause -> . expression GEQ expression
    (41) clause -> . expression LEQ expression
    (42) clause -> . expression
    (43) expression -> . expression PLUS expression
    (44) expression -> . expression MINUS expression
    (45) expression -> . expression TIMES expression
    (46) expression -> . expression DIVIDE expression
    (47) expression -> . MINUS expression
    (48) expression -> . numeric
    (51) expression -> . ID
    (52) expression -> . STRING
    (53) expression -> . funcall
    (49) numeric -> . INT
    (50) numeric -> . FLOAT
    (17) funcall -> . ID LPAREN args RPAREN
    (18) funcall -> . ID LPAREN RPAREN
